--- a/src/client/components/board/BoardTile/BoardTile.module.scss
+++ b/src/client/components/board/BoardTile/BoardTile.module.scss
@@ -18,6 +18,15 @@
   justify-content: center;
   align-items: center;
 
+  color: black;
   text-align: center;
   line-height: 14px;
+
+  p {
+    margin-top: 1em;
+  }
+}
+.clicked {
+  background-color: #138b00;
+  color: #ffffff;
 }
